# pkmn_api_wrapper

./: README.md  api.py  exceptions.py  pyproject.toml  requirements.txt
models/: base.py
pokeapi_wrapper/examples/: basic_usage.py  example.ipynb
pokeapi_wrapper/models/: pokemon.py
tests/pokeapi_wrapper/: test_api.py
tests/pokeapi_wrapper/models/: test_models.py
